// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`base > should create a base project 1`] = `
[
  "./test/path/.editorconfig",
  "./test/path/.gitignore",
  "./test/path/.prettierignore",
  "./test/path/package.json",
  "./test/path/pnpm-workspace.yaml",
  "./test/path/reset.d.ts",
  "./test/path/tsconfig.json",
  "./test/path/turbo.json",
  "./test/path/.vscode/settings.json",
]
`;

exports[`base > storybook > should create a storybook app 1`] = `
[
  "./test/path/.editorconfig",
  "./test/path/.gitignore",
  "./test/path/.prettierignore",
  "./test/path/package.json",
  "./test/path/pnpm-workspace.yaml",
  "./test/path/reset.d.ts",
  "./test/path/tsconfig.json",
  "./test/path/turbo.json",
  "./test/path/.vscode/settings.json",
  "./test/path/apps/storybook/package.json",
  "./test/path/apps/storybook/tsconfig.json",
  "./test/path/apps/storybook/turbo.json",
  "./test/path/apps/storybook/config/main.ts",
  "./test/path/apps/storybook/config/preview.tsx",
  "./test/path/apps/storybook/stories/examples/Button.stories.tsx",
]
`;

exports[`base > swagger-sdk > should create a swagger-sdk module 1`] = `
[
  "./test/path/.editorconfig",
  "./test/path/.gitignore",
  "./test/path/.prettierignore",
  "./test/path/package.json",
  "./test/path/pnpm-workspace.yaml",
  "./test/path/reset.d.ts",
  "./test/path/tsconfig.json",
  "./test/path/turbo.json",
  "./test/path/.vscode/settings.json",
  "./test/path/packages/swagger-sdk/generateExports.ts",
  "./test/path/packages/swagger-sdk/orval.config.ts",
  "./test/path/packages/swagger-sdk/package.json",
  "./test/path/packages/swagger-sdk/tsconfig.json",
  "./test/path/packages/swagger-sdk/tsup.config.ts",
  "./test/path/packages/swagger-sdk/turbo.json",
]
`;

exports[`base > trpc > should add a trpc module 1`] = `
[
  "./test/path/.editorconfig",
  "./test/path/.gitignore",
  "./test/path/.prettierignore",
  "./test/path/package.json",
  "./test/path/pnpm-workspace.yaml",
  "./test/path/reset.d.ts",
  "./test/path/tsconfig.json",
  "./test/path/turbo.json",
  "./test/path/.vscode/settings.json",
  "./test/path/apps/web/.env",
  "./test/path/apps/web/next.config.mjs",
  "./test/path/apps/web/package.json",
  "./test/path/apps/web/tsconfig.json",
  "./test/path/apps/web/turbo.json",
  "./test/path/packages/trpc/package.json",
  "./test/path/packages/trpc/tsconfig.json",
  "./test/path/packages/trpc/tsup.config.ts",
  "./test/path/packages/trpc/src/index.ts",
  "./test/path/packages/trpc/src/trpc.ts",
  "./test/path/apps/web/src/app/layout.tsx",
  "./test/path/apps/web/src/app/page.tsx",
  "./test/path/packages/trpc/src/router/index.ts",
  "./test/path/packages/trpc/src/router/example/hello.ts",
]
`;

exports[`base > web > should create a web app 1`] = `
[
  "./test/path/.editorconfig",
  "./test/path/.gitignore",
  "./test/path/.prettierignore",
  "./test/path/package.json",
  "./test/path/pnpm-workspace.yaml",
  "./test/path/reset.d.ts",
  "./test/path/tsconfig.json",
  "./test/path/turbo.json",
  "./test/path/.vscode/settings.json",
  "./test/path/apps/web/.env",
  "./test/path/apps/web/next.config.mjs",
  "./test/path/apps/web/package.json",
  "./test/path/apps/web/tsconfig.json",
  "./test/path/apps/web/turbo.json",
  "./test/path/apps/web/src/app/layout.tsx",
  "./test/path/apps/web/src/app/page.tsx",
]
`;
